--- a/charts/django-app/ templates/service.yaml
+++ b/charts/django-app/ templates/service.yaml
@@ -1,13 +1,28 @@
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: {{ include "django-app.fullname" . }}
+#   labels:
+#     app: {{ include "django-app.name" . }}
+# spec:
+#   type: {{ .Values.service.type }}
+#   selector:
+#     app: {{ include "django-app.name" . }}
+#   ports:
+#     - name: http
+#       port: {{ .Values.service.port }}
+#       targetPort: {{ .Values.service.targetPort }}
+
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "django-app.fullname" . }}
+  name: {{ .Release.Name }}
   labels:
-    app: {{ include "django-app.name" . }}
+    app: {{ .Release.Name }}
 spec:
   type: {{ .Values.service.type }}
   selector:
-    app: {{ include "django-app.name" . }}
+    app: {{ .Release.Name }}
   ports:
     - name: http
       port: {{ .Values.service.port }}
